platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_41.platter
start(){
    pass(piece of i = 0; i += 3; i > 0){
        serve i;
    }
}